--- a/MetaCopy/MetaCopy.csproj
+++ b/MetaCopy/MetaCopy.csproj
@@ -95,6 +95,12 @@
     <Compile Include="MiniMode.Designer.cs">
       <DependentUpon>MiniMode.cs</DependentUpon>
     </Compile>
+    <Compile Include="PrefWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PrefWindow.Designer.cs">
+      <DependentUpon>PrefWindow.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Components\CustomButton.resx">
@@ -105,6 +111,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MiniMode.resx">
       <DependentUpon>MiniMode.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PrefWindow.resx">
+      <DependentUpon>PrefWindow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
