--- a/MetaCopy/MetaCopy.csproj
+++ b/MetaCopy/MetaCopy.csproj
@@ -55,6 +55,15 @@
   <PropertyGroup>
     <ApplicationIcon>output2.ico</ApplicationIcon>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignManifests>false</SignManifests>
+  </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>MetaExt.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="GlacialList, Version=1.0.1513.31776, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
@@ -88,12 +97,13 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="FileObject.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MetaCore.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MetaCore.Designer.cs">
+      <DependentUpon>MetaCore.cs</DependentUpon>
     </Compile>
+    <Compile Include="MetaCopyExt.cs" />
     <Compile Include="MiniMode.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,8 +124,8 @@
     <EmbeddedResource Include="Components\CustomButton.resx">
       <DependentUpon>CustomButton.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MetaCore.resx">
+      <DependentUpon>MetaCore.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MiniMode.resx">
       <DependentUpon>MiniMode.cs</DependentUpon>
@@ -132,6 +142,7 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="MetaExt.snk" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
