--- a/MetaCopy/packages.config
+++ b/MetaCopy/packages.config
@@ -3,4 +3,5 @@
   <package id="Costura.Fody" version="1.3.3.0" targetFramework="net452" developmentDependency="true" />
   <package id="Fody" version="1.28.3" targetFramework="net452" developmentDependency="true" />
   <package id="SharpShell" version="2.2.0.0" targetFramework="net452" />
+  <package id="XDMessaging" version="5.0.1" targetFramework="net452" />
 </packages>
