--- a/MetaCopy/MetaCopy.csproj
+++ b/MetaCopy/MetaCopy.csproj
@@ -64,6 +64,9 @@
   <PropertyGroup>
     <AssemblyOriginatorKeyFile>MetaExt.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="GlacialList, Version=1.0.1513.31776, Culture=neutral">
       <SpecificVersion>False</SpecificVersion>
@@ -127,6 +130,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerEntry.cs" />
     <Compile Include="ServerManagerApi.cs" />
+    <Compile Include="Settings.cs" />
     <EmbeddedResource Include="Components\CustomButton.resx">
       <DependentUpon>CustomButton.cs</DependentUpon>
     </EmbeddedResource>
@@ -149,6 +153,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.manifest" />
     <None Include="MetaExt.snk" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
