--- a/MetaCopy/MetaCopy.csproj
+++ b/MetaCopy/MetaCopy.csproj
@@ -126,6 +126,7 @@
     <Compile Include="PrefWindow.Designer.cs">
       <DependentUpon>PrefWindow.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProcessIntegrityChecker.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServerEntry.cs" />
